change to common name and centered continents list

--- a/src/styles/Country.scss
+++ b/src/styles/Country.scss
@@ -11,8 +11,10 @@
 
 .card_info{
     line-height: 5px;
+    
 
     &_continents{
         list-style: none;
+        margin-left: -40px;
     }
 }
